--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,9 +1,14 @@
-name: Build Stealth Proxy Image
+name: Build and Push to GHCR
 
 on:
   push:
-    branches: [ "main" ]  # 只有推送到 main 分支时触发
-  workflow_dispatch:      # 允许手动触发构建
+    branches: [ "main" ]
+  workflow_dispatch:
+
+# 必须设置权限以允许推送镜像到 GHCR
+permissions:
+  contents: read
+  packages: write
 
 jobs:
   build-and-push:
@@ -16,11 +21,12 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Login to Docker Hub
+      - name: Login to GHCR
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and Push
         uses: docker/build-push-action@v5
@@ -28,10 +34,9 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          # 建议将镜像设为私有，或者使用一个模糊的名字
+          # 镜像名称格式：ghcr.io/用户名/仓库名:标签
           tags: |
-            ${{ secrets.DOCKER_USERNAME }}/sys-runtime-opt:latest
-            ${{ secrets.DOCKER_USERNAME }}/sys-runtime-opt:${{ github.sha }}
-          # 启用缓存加快后续构建速度
+            ghcr.io/${{ github.repository }}:latest
+            ghcr.io/${{ github.repository }}:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
